@@ -1,53 +1,69 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.8'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.liquibase.gradle' version '2.1.0'
+	id 'org.springframework.boot' version '2.6.8' apply false
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
+	id 'org.liquibase.gradle' version '2.1.0' apply false
+	id 'com.google.cloud.tools.jib' version '3.2.1' apply false
+	id "org.sonarqube" version "3.4.0.2513" apply false
+	id 'idea'
+	id 'org.hidetake.swagger.generator' version '2.19.2' apply false
     id 'java'
-    id 'com.google.cloud.tools.jib' version '3.2.1'
-    id "org.sonarqube" version "3.4.0.2513"
+    id 'com.diffplug.spotless' version '6.8.0'
 }
 
-group = 'org.databiosphere'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+repositories { mavenCentral() }
 
-repositories {
-    mavenCentral()
+subprojects {
+	group = 'org.databiosphere'
+	version = '0.0.1-SNAPSHOT'
+
+	apply plugin: 'idea'
+	apply plugin: 'java'
+
+	ext {
+		artifactGroup = "${group}.${rootProject.name}"
+	}
+
+	apply plugin: 'io.spring.dependency-management'
+
+	dependencyManagement {
+		imports {
+			mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
+		}
+
+		dependencies {
+			dependency 'io.swagger.core.v3:swagger-annotations:2.1.13'
+			dependency 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.34'
+		}
+	}
+
+	tasks.withType(org.hidetake.gradle.swagger.generator.GenerateSwaggerCode).all {
+		jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for jvm 16+
+	}
 }
 
-jib {
-    from {
-        // see https://github.com/broadinstitute/dsp-appsec-blessed-images/tree/main/jre
-        image = "us.gcr.io/broad-dsp-gcr-public/base/jre:17-distroless"
+idea.project.jdkName = '17'
+
+// Spotless configuration
+spotless {
+    java {
+        googleJavaFormat()
+        targetExclude("${buildDir}/**", "**/generated/**")
     }
+    format 'misc', {
+        // define the files to apply `misc` to
+        target '*.gradle', '*.md', '.gitignore'
 
-    container {
-        mainClass = 'org.databiosphere.workspacedataservice.WorkspaceDataServiceApplication'
+        // N.B. checks for tabs vs. spaces but does not check the number of spaces
+        // https://github.com/diffplug/spotless/issues/794
+        indentWithSpaces()
+        trimTrailingWhitespace()
+        endWithNewline()
     }
 }
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.liquibase:liquibase-core'
-    implementation 'org.apache.commons:commons-lang3'
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation 'org.postgresql:postgresql'
-    implementation 'org.webjars:webjars-locator-core:0.52'
-    runtimeOnly 'org.webjars.npm:swagger-ui-dist:4.12.0'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-}
-
-sonarqube {
-    properties {
-        property "sonar.projectKey", "DataBiosphere_workspace-data-service"
-        property "sonar.organization", "broad-databiosphere"
-        property "sonar.host.url", "https://sonarcloud.io"
-    }
-}
+// disable for now. As a developer, re-enable these tasks and then run ./gradlew spotlessCheck
+// to see the results.
+tasks.spotlessJavaCheck.enabled = false
+tasks.spotlessMiscCheck.enabled = false
 
 tasks.named('test') {
     useJUnitPlatform()
@@ -56,4 +72,3 @@ tasks.named('test') {
         exceptionFormat = "full"
     }
 }
-
